<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@drawable/back_user_ava"
        android:layout_width="match_parent"
        android:layout_height="120dp">

    </RelativeLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:paddingTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.mplayer1.mview.CircleImageView
            android:id="@+id/avatar"
            android:src="@drawable/wk"
            android:layout_width="90dp"
            android:layout_height="90dp"/>
        <TextView
            android:paddingTop="8dp"
            android:textSize="15sp"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="8dp"

            android:text="@string/nav_header_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="8dp"

            android:text="@string/qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="18dp"

            android:text="@string/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="8dp"

            android:text="@string/android_minversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="8dp"

            android:text="@string/ijk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="8dp"

            android:text="@string/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:text="@string/Conclusion" />
    </LinearLayout>
</RelativeLayout>